<resources>
    <string name="app_name">Machines</string>
    <string name="notes_hint">Ej: Se repara boquilla dañada</string>
    <string name="money_hint">$130.500</string>
    <string name="money_explanation">Ingrese el dinero obtenido:</string>
    <string name="notes">Notas</string>
    <string name="machine_name">Maquina 1</string>
    <string name="date_hint">Ej: 25/11/1992</string>
    <string name="date">Fecha</string>
    <string name="date_button">seleccionar fecha</string>
    <string name="title_activity_tabs">Tabs</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
