<?xml version="1.0" encoding="utf-8"?>
<ScrollView    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_income_creation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tech.destinum.machines.IncomeCreation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rl">

        <TextView
            android:text="@string/machine_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvMachineLocation"
            android:textSize="20sp"/>

        <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/etMoney"
        android:hint="@string/money_hint"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvMoneyHint"/>

    <TextView
        android:text="@string/money_explanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:id="@+id/tvMoneyHint"
        android:layout_below="@id/tvMachineLocation"
        android:textSize="20sp"/>

    <TextView
        android:text="@string/notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMoney"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:id="@+id/tvNotesHint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:hint="@string/notes_hint"
        android:layout_below="@+id/tvNotesHint"
        android:id="@+id/etNotes"/>

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/datePicker"
            android:layout_marginTop="20dp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/etNotes"/>

    </RelativeLayout>


</ScrollView>
